<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:text="@string/login_textview_teaRegister"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/teaRegister_imageView_Close"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:src="@mipmap/ic_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_user" />

        <EditText
            android:id="@+id/teaRegister_editText_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_editText_user"
            android:inputType="textShortMessage"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_password" />

        <EditText
            android:id="@+id/teaRegister_editText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_editText_password"
            android:inputType="textPassword"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_name" />

        <EditText
            android:id="@+id/teaRegister_editText_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_editText_name"
            android:inputType="text"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_phone" />

        <EditText
            android:id="@+id/teaRegister_editText_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_editText_phone"
            android:inputType="phone"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_room" />

        <EditText
            android:id="@+id/teaRegister_editText_romNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_editText_roomNumber"
            android:inputType="textShortMessage"
            android:textSize="25dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/Gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="注意事项：1.实验室门牌号有：D501-D505。" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/Gray" />

    <Button
        android:id="@+id/teaRegister_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button_select"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="注 册"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>