<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:text="@string/login_textview_register"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/register_imageview_Close"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
            android:src="@mipmap/ic_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_user" />

        <EditText
            android:id="@+id/register_editText_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_editText_user"
            android:inputType="textShortMessage"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_password" />

        <EditText
            android:id="@+id/register_editText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_editText_password"
            android:inputType="textPassword"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_name" />

        <EditText
            android:id="@+id/register_editText_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_editText_name"
            android:inputType="text"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_class" />

        <EditText
            android:id="@+id/register_editText_class"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_editText_class"
            android:inputType="textLongMessage"
            android:textSize="25dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/Gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="注册注意事项：&#x000A;1.班级填写形如：18级计科1班。&#x000A;2.真实姓名和班级请认真填写，注册后将无法修改。" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/Gray" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button_select"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="注 册"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>